app/tests/fails/panic_without_message.stderr
error: panic needs a mesage!

         = help: try to add a message: panic!("Example".to_string());
         = note: we will add message to Result's Err

  --> tests/fails/panic_without_message.rs:12:9
   |
12 |         panic!();
   |         ^^^^^^^^^
